[gd_scene load_steps=3 format=3 uid="uid://bx8c4xqf3ekcf"]

[ext_resource type="Script" path="res://entities/BoostItem.gd" id="1_0j2kx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 25.0

[node name="BoostItem" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_0j2kx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"] 